[package]
name = "forsa"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
license = "MIT"
repository = "https://github.com/BitFors/Forsa"
homepage = "https://github.com/BitFors/Forsa"
documentation = "https://docs.rs/forza"
keywords = ["bittorrent", "bitfors", "p2p", "dht", "torrent"]
categories = ["network-programming", "parsing"]
description = "A complete BitTorrent protocol implementation in Rust"

[features]
default = ["full"]
full = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytes = "1.11.1"
thiserror = "2.0.18"

[dev-dependencies]
